scripts/all-in-one/grok/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: davtro
  labels:
    app.kubernetes.io/part-of: davtro-platform
    # ISTIO: automatyczny injection Envoy sidecara do wszystkich podów w ns
    istio-injection: enabled
